--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,25 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Parthu Sekhar | Java Developer</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<nav>
+<nav id="navbar">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="skills.html">Skills</a>
     <a href="projects.html">Projects</a>
     <a href="education.html">Education</a>
     <a href="contact.html">Contact</a>
+    <button id="theme-toggle">🌙</button>
 </nav>
 
 <section class="home">
-    <h1>Hi, I'm Parthu Sekhar 👋</h1>
-    <h2>Entry-Level Java Developer</h2>
-    <p>Backend Developer skilled in Java, Spring Boot, JPA, Hibernate & SQL</p>
+    <div class="home-container">
+        <img src="profile.jpg" alt="Parthu" class="profile-pic">
+        
+        <div class="intro">
+            <h1>Hi, I'm Parthu Sekhar 👋</h1>
+            <h2>Java Backend Developer</h2>
+            <p>Building scalable backend systems using Java, Spring Boot & SQL.</p>
+        </div>
+    </div>
 </section>
 
-</body>
-</html>
+<script>
+const toggle = document.getElementById("theme-toggle");
+toggle.addEventListener("click", () => {
+    document.body.classList.toggle("dark-mode");
+});
+</script>
