--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -10,7 +10,7 @@
 
 <section class="home">
     <div class="home-container">
-        <img src="profile.jpg" alt="Parthu" class="profile-pic">
+        <img src="profile.png" alt="Parthu" class="profile-pic">
         
         <div class="intro">
             <h1>Hi, I'm Parthu Sekhar 👋</h1>
