--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Parthu Sekhar | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
 <nav id="navbar">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -26,3 +35,6 @@ toggle.addEventListener("click", () => {
     document.body.classList.toggle("dark-mode");
 });
 </script>
+
+</body>
+</html>
