--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <div class="intro">
             <h1>Hi, I'm Parthu Sekhar 👋</h1>
-            <h2>Java Backend Developer</h2>
+            <h2>Software Developer</h2>
             <p>Building scalable backend systems using Java, Spring Boot & SQL.</p>
         </div>
     </div>
