--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <section>
     <h1>About Me</h1>
     <p>
-        Entry-Level Java Developer with strong foundation in Core Java, Java 8, Spring Boot, JPA and SQL.
+        Entry-Level Software Developer with strong foundation in Core Java, Java 8, Spring Boot, JPA and SQL.
         Experienced in building backend applications and REST APIs. Passionate about scalable systems and backend architecture.
     </p>
 </section>
