--- a/projects.html
+++ b/projects.html
@@ -17,17 +17,15 @@
 
 <section>
     <h1>Projects</h1>
+     <div class="card">
+        <h3>Smart Employee Management System</h3>
+        <p>A secure and scalable Spring Boot REST API for managing employees with JWT-based authentication, robust CRUD operations, and MySQL integration.</p>
+    </div>
 
     <div class="card">
         <h3>User Management System</h3>
         <p>Backend application using Java, Spring Boot, JPA, Hibernate, MySQL. Implemented REST APIs for CRUD operations.</p>
     </div>
-
-    <div class="card">
-        <h3>Employee Management System</h3>
-        <p>REST-based employee management system with entity mapping, exception handling and database integration.</p>
-    </div>
-
 </section>
 
 </body>
