--- a/skills.html
+++ b/skills.html
@@ -21,6 +21,7 @@
         <li>Java (Core Java, Java 8)</li>
         <li>Spring Boot</li>
         <li>Spring Data JPA</li>
+        <li>Spring Security</li>
         <li>Hibernate</li>
         <li>REST APIs</li>
         <li>Oracle SQL, MySQL</li>
